--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -331,18 +331,22 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
          "type": "scatter",
-         "uid": "2d2926f4-b403-11e9-a81c-9b1e013469b1"
+         "uid": "184ca476-b404-11e9-a81c-9b1e013469b1"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"be880e5e-a172-4ac7-97af-92d306f9032d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"be880e5e-a172-4ac7-97af-92d306f9032d\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"2d2ec096-b403-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c132cb0e-6ce5-4917-a89a-dc684a0cb9a0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c132cb0e-6ce5-4917-a89a-dc684a0cb9a0\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"18549370-b404-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"be880e5e-a172-4ac7-97af-92d306f9032d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"be880e5e-a172-4ac7-97af-92d306f9032d\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"2d2ec096-b403-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c132cb0e-6ce5-4917-a89a-dc684a0cb9a0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c132cb0e-6ce5-4917-a89a-dc684a0cb9a0\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"18549370-b404-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
