--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,9 +393,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "scatter",
+         "uid": "0050698a-b417-11e9-a81c-9b1e013469b1",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
+        },
+        {
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
+         "type": "scatter",
+         "uid": "00506af2-b417-11e9-a81c-9b1e013469b1",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"0d5c1adc-d20e-48f1-9ef6-bc365a862b79\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0d5c1adc-d20e-48f1-9ef6-bc365a862b79\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"005713e8-b417-11e9-a81c-9b1e013469b1\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"005715f0-b417-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"0d5c1adc-d20e-48f1-9ef6-bc365a862b79\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0d5c1adc-d20e-48f1-9ef6-bc365a862b79\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"005713e8-b417-11e9-a81c-9b1e013469b1\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"005715f0-b417-11e9-a81c-9b1e013469b1\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
