--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "\n",
+    "area_values={}\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [x_values], 'y': [area_values], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [x_values], 'y': [y_values], 'text': [text_values]}"
    ]
