--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values=[4758,2731571]\n",
+    "area_values=[4758,2731571,3194]\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [x_values], 'y': [area_values], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [x_values], 'y': [y_values], 'text': [text_values]}"
    ]
